--- a/resources/LaboratoryDemo.rc
+++ b/resources/LaboratoryDemo.rc
@@ -2,10 +2,10 @@
 // first icon in the executable and the icons are sorted both by their order
 // and alphabetically (!), so put this icon first and give it a name
 // starting with "a"
-aaaaaaaa ICON "MachineDemoIcon.ico"
+aaaaaaaa ICON "frank-icon.ico"
 
 // this icon is used with wxFrame::SetIcon()
-mainframe ICON "MachineDemoIcon.ico"
+mainframe ICON "frank-icon.ico"
 
 // set this to 1 if you don't want to use manifest resource (manifest resource
 // is needed to enable visual styles on Windows XP - see docs/msw/winxp.txt
